Correciones para cargar CSS en el index

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <!--Establece palabras clave para la página, permite mejorar la búsqueda y da posicionamiento SEO-->
     <meta property="og:title" content="Aley Cabrera | Desarrollador de Software y Ciberseguridad">
     <meta property="og:description" content="Desarrollo de software, desarrollo web full stack, análisis de sistemas y ciberseguridad. Soluciones innovadoras, escalables y seguras para impulsar tu negocio en el mundo digital.">
-    <meta property="og:image" content="/frontend/src/assets/imagenes/AleyCabrera1.png">
+    <meta property="og:image" content="frontend/src/assets/imagenes/AleyCabrera1.png">
     <meta property="og:url" content="https://tusitio.com/index.html">
     <meta name="twitter:card" content="summary_large_image">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"><!--Establece el modo de compatibilidad del navegador.-->
-    <link rel="icon" href="/frontend/public/aleycabrera.ico" type="image/x-icon"><!--Establece el icono de la página.-->
-    <link rel="stylesheet" type="text/css" href="/frontend/src/styles/style.css">
+    <link rel="icon" href="frontend/public/aleycabrera.ico" type="image/x-icon"><!--Establece el icono de la página.-->
+    <link rel="stylesheet" type="text/css" href="frontend/src/styles/style.css">
     <!--Establece la hoja de estilos de la página.-->
     <link rel="stylesheet" href="/" media="screen and (min-width: 320px)"><!--Establece la hoja de estilos de la página mobile S.-->
     <link rel="stylesheet" href="/" media="screen and (min-width: 375px)"><!--Establece la hoja de estilos de la página mobile M.-->
@@ -43,8 +43,8 @@
             <!-- Contenedor del logo -->
             <div class="logocontainer" id="logocontainer">
                 <div class="pelogo" id="pelogo">
-                    <a href="/frontend/public/index.html">
-                        <img src="/frontend/src/assets/imagenes/logo1.png" alt="Logo Aley Cabrera" title="Aley Cabrera D">
+                    <a href="index.html">
+                        <img src="frontend/src/assets/imagenes/logo1.png" alt="Logo Aley Cabrera" title="Aley Cabrera D">
                     </a>
                 </div>
                 <div class="loader"
@@ -61,10 +61,10 @@
             </div>
         
             <ul class="lista">
-                <a href="/frontend/src/pages/sobremi.html" class="items">Sobre mí</a><!--direige a la sección sobre mi-->
-                <a href="/frontend/src/pages/proyectos.html" class="items">Proyectos</a><!--direige a la sección proyectos-->
-                <a href="/frontend/src/pages/blog.html" class="items">Blog</a><!--dirige a la sección blog-->
-                <a href="/frontend/src/pages/contacto.html" class="items">Contacto</a><!--dirige a la sección contacto-->
+                <a href="frontend/src/pages/sobremi.html" class="items">Sobre mí</a><!--direige a la sección sobre mi-->
+                <a href="frontend/src/pages/proyectos.html" class="items">Proyectos</a><!--direige a la sección proyectos-->
+                <a href="frontend/src/pages/blog.html" class="items">Blog</a><!--dirige a la sección blog-->
+                <a href="frontend/src/pages/contacto.html" class="items">Contacto</a><!--dirige a la sección contacto-->
             </ul>
         </nav>
     </header>
@@ -72,7 +72,7 @@
     <main>
         <section class="video-fondo-aley">
             <video autoplay loop muted playsinline loading="lazy"><!--Establece el video de fondo.-->
-                <source src="/frontend/src/assets/videos/Linea Gota.webm" type="video/mp4">
+                <source src="frontend/src/assets/videos/Linea Gota.webm" type="video/mp4">
             </video>
         </section>
         <section>
@@ -85,7 +85,7 @@
                 <h3>¿Tienes un proyecto en mente?</h3>
         
                 <button class="corner-button">
-                    <a href="/frontend/src/pages/contacto.html">
+                    <a href="frontend/src/pages/contacto.html">
                         <span>¡Hagamoslo Realidad!</span>
                     </a>
                 </button>
@@ -109,6 +109,6 @@
         </div>
     </footer>
 
-    <script src="/frontend/src/javascript/contenidoDeHome.js"></script>
+    <script src="frontend/src/javascript/contenidoDeHome.js"></script>
 </body>
 </html>
