Correciones para mejorar pages sobre mi

--- a/frontend/src/pages/proyectos.html
+++ b/frontend/src/pages/proyectos.html
@@ -73,7 +73,7 @@
             </div>
 
             <ul class="lista">
-                <a href="/frontend/src/pages/sobremi.html" class="items">Sobre mí</a><!--direige a la sección sobre mi-->
+                <a href="./frontend/src/pages/sobremi.html" class="items">Sobre mí</a><!--direige a la sección sobre mi-->
                 <a href="/frontend/src/pages/proyectos.html" class="items">Proyectos</a><!--direige a la sección proyectos-->
                 <a href="/frontend/src/pages/blog.html" class="items">Blog</a><!--dirige a la sección blog-->
                 <a href="/frontend/src/pages/contacto.html" class="items">Contacto</a><!--dirige a la sección contacto-->
