--- a/sobremi.html
+++ b/sobremi.html
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <link rel="icon" href="assets/iconos/aleycabrera.ico" type="image/x-icon">
     <!--Establece el icono de la página.-->
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <!--Establece la hoja de estilos de la página.-->
     <link rel="stylesheet" href="/" media="screen and (min-width: 320px)">
     <!--Establece la hoja de estilos de la página mobile S.-->
