correcion de page sobre mi para ruta 2

--- a/sobremi.html
+++ b/sobremi.html
@@ -53,7 +53,7 @@
             <!-- Contenedor del logo -->
             <div class="logocontainer" id="logocontainer">
                 <div class="pelogo" id="pelogo">
-                    <a href="/index.html">
+                    <a href="./index.html">
                         <img src="assets/imagenes/logo2.png" alt="Logo Aley Cabrera" title="Aley Cabrera D">
                     </a>
                 </div>
