actualizacion y correciones de los archivos sobre mi, proyectos, blog y main.css

--- a/proyectos.html
+++ b/proyectos.html
@@ -93,7 +93,7 @@
             <h1 class="h1_proyectos">Proyectos</h1>
         </section>
 
-        <section class="proyectos-contenedor">
+        <section class="proyectos_contenedor">
             <section class="proyecto">
                 <div>
                     <a href=""><img src="/" alt=""></a>
