--- a/sobremi.html
+++ b/sobremi.html
@@ -304,9 +304,9 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer_sobremi">
         <section class="redes-email">
-            <div class="social">
+            <div class="social_sobremi">
                 <a href="https://github.com/AleyCabrera" target="_blank" class="icon" aria-label="GitHub"><i
                         class="fab fa-github"></i></a>
                 <a href="https://www.instagram.com/alycabdel/" target="_blank" class="icon" aria-label="Instagram"><i
@@ -317,11 +317,11 @@
                 <a href="/" target="_blank" class="icon" aria-label="Youtube"><i class="fa-brands fa-youtube"></i></a>
             </div>
             <div class="email">
-                <a href="aley.cabrera@gmail.com" class="ac" aria-label="E-mail">aley.cabrera@gmail.com</a>
+                <a href="aley.cabrera@gmail.com" class="ac_sobremi" aria-label="E-mail">aley.cabrera@gmail.com</a>
             </div>
         </section>
     
-        <div class="line"></div>
+        <div class="line_sobremi"></div>
     
         <p class="derechos">&copy; Aley Cabrera. Todos los derechos reservados.</p>
     </footer>
