correcion de css para page contacto

--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"><!--Establece el modo de compatibilidad del navegador.-->
     <link rel="icon" href="assets/iconos/aleycabrera.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <!--Establece la hoja de estilos de la página.-->
     <link rel="stylesheet" href="/" media="screen and (min-width: 320px)">
     <!--Establece la hoja de estilos de la página mobile S.-->
