se sebe archivo de certificaciones, actualizacion y correciones de acrchivos contacto, sobre mi, main.css, asset y main.js

--- a/contacto.html
+++ b/contacto.html
@@ -80,10 +80,25 @@
     </header>
 
     <main class="main_contacto">
-        <div class="titulo_contacto">
-            <h1 class="h1_contacto">¡Hola! Soy Aley Cabrera</h1>
-            <p class="p_contacto">Si tienes alguna pregunta, sugerencia o simplemente quieres hablar conmigo, no dudes en ponerte en contacto conmigo.</p>
-        </div>
+        
+        <section class="titulo_main_contacto">
+            <div class="grid">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+                <div>7</div>
+                <div>8</div>
+                <div>9</div>
+            </div>
+            <div class="titulo_contacto">
+                <h1 class="h1_contacto">¡Hola! Soy Aley Cabrera</h1>
+                <p class="p_contacto">Si tienes alguna pregunta, sugerencia o simplemente quieres hablar conmigo, no dudes en
+                    ponerte en contacto conmigo.</p>
+            </div>
+        </section>
         <section class="contacto_contenedor">
             <form class="formulario" action="">
                 <div class="nombre">
