--- a/sobremi.html
+++ b/sobremi.html
@@ -131,8 +131,8 @@
             </section>
 
             <!-- Ejemplo de mejora en el CTA de certificaciones -->
-            <section class="certificaciones_contenedor">
-                <h2 class="certificaciones_titulo">Certificaciones</h2>
+            <section class="btn_certificaciones_contenedor">
+                <h2 class="btn_certificaciones_titulo">Certificaciones</h2>
                 <p class="parrafo_sobremi">"Mi viaje en la tecnología en especial en desarrollo de software y ciberseguridad está respaldado por horas de
                     aprendizaje, práctica y
                     certificaciones que validan mi conocimiento. Me encantaría compartir contigo los logros que he alcanzado. ¡Haz
