correcion a el enlace del css media queries

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="icon" href="assets/iconos/aleycabrera.ico" type="image/x-icon"><!--Establece el icono de la página.-->
     <link rel="stylesheet" type="text/css" href="css/mainHome.css">
     <!--Establece la hoja de estilos de la página.-->
-    <link rel="stylesheet" href="/css/media_queries_home.css" media="screen and (max-width: 320px)"><!--Establece la hoja de estilos de la página mobile S.-->
+    <link rel="stylesheet" href="css/media_queries_home.css" media="screen and (max-width: 320px)"><!--Establece la hoja de estilos de la página mobile S.-->
     <link rel="stylesheet" href="/" media="screen and (max-width: 375px)"><!--Establece la hoja de estilos de la página mobile M.-->
     <link rel="stylesheet" href="/" media="screen and (max-width: 425px)"><!--Establece la hoja de estilos de la página mobile L.-->
     <link rel="stylesheet" href="/" media="screen and (max-width: 768px)"><!--Establece la hoja de estilos de la página Tablet.-->
