--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Establece la hoja de estilos de la página.-->
     <link rel="stylesheet" href="css/media_queries_home.css" media="screen and (max-width: 320px)"><!--Establece la hoja de estilos de la página mobile S.-->
     <link rel="stylesheet" href="/" media="screen and (max-width: 375px)"><!--Establece la hoja de estilos de la página mobile M.-->
-    <link rel="stylesheet" href="/" media="screen and (max-width: 425px)"><!--Establece la hoja de estilos de la página mobile L.-->
+    <link rel="stylesheet" href="css/media_queries_home.css" media="screen and (max-width: 425px)"><!--Establece la hoja de estilos de la página mobile L.-->
     <link rel="stylesheet" href="/" media="screen and (max-width: 768px)"><!--Establece la hoja de estilos de la página Tablet.-->
     <link rel="stylesheet" href="/" media="screen and (max-width: 1024px)"><!--Establece la hoja de estilos de la página laptop.-->
     <link rel="stylesheet" href="/" media="screen and (max-width: 1440px)"><!--Establece la hoja de estilos de la página laptop L.-->
