mejoras en el footer

--- a/index.html
+++ b/index.html
@@ -603,9 +603,6 @@
     <!-- Footer futurista -->
     <footer class="cyber-footer">
         <div class="footer-content">
-            <div class="footer-logo">
-                <canvas id="footerWolfCanvas"></canvas>
-            </div>
 
             <div class="footer-links">
                 <a href="#home">INICIO</a>
@@ -616,8 +613,9 @@
             </div>
 
             <div class="footer-credits">
-                <p>© 2023 ALEY CABRERA. TODOS LOS DERECHOS RESERVADOS.</p>
-                <p>DESARROLLADO CON TECNOLOGÍAS FUTURISTAS</p>
+                <p>© <span id="year"></span> Aley Cabrera D. Todos los derechos reservados.</p>
+                <p><em>"Donde la chispa de un circuito se une al arte del código
+                y la seguridad es la base de cada creación."</em></p>
             </div>
         </div>
     </footer>
@@ -631,6 +629,7 @@
     <!-- Scripts unificados -->
     <script src="./main.js"></script>
     <script src="./js/entradaScroll.js"></script>
+    <script src="./js/years.js"></script>
 </body>
 
 </html>
