--- a/index.html
+++ b/index.html
@@ -5,14 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Portafolio profesional de Aley Cabrera - Desarrollador de Software especializado en soluciones innovadoras con IA y Blockchain">
-    <meta name="keywords" content="desarrollo software, blockchain, inteligencia artificial, ciberseguridad, web3">
+        content="Portafolio profesional de Aley Cabrera - Desarrollador de Software y Especialista en Ciberseguridad. Explora mis proyectos, habilidades y experiencia en tecnología avanzada.">
+    <meta name="keywords" content="Aley Cabrera, Desarrollador de Software, Ciberseguridad, Electronica, soporte tecnico, Inteligencia Artificial, Portafolio, Proyectos, Habilidades, Tecnología, Innovación">
+    <meta name="Aley Cabrera D" content="Inesam ArkCyber - Aley Cabrera De la Hoz">
+    <meta property="og:title" content="Aley Cabrera | Desarrollador de Software | Ciberseguridad">
+    <meta property="og:description" content="Portafolio profesional de Aley Cabrera - Desarrollador de Software y Especialista en Ciberseguridad. Explora mis proyectos, habilidades y experiencia en tecnología avanzada.">
+    <meta property="og:image" content="assets/img/AleyCabrera1.png">
+    <meta property="og:url" content="https://tusitio.com">
     <title>Aley Cabrera | Desarrollador de Software | Ciberseguridad</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:image" content="">
+    <meta property="og:url" content="">
+    <meta property="og:site_name" content="">
+    <meta property="og:title" content="">
+    <meta property="og:description"
+        content="">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="">
+    <meta property="twitter:title" content="">
+    <meta property="twitter:description"
+        content="">
+    <meta property="twitter:image" content="">
+    <meta property="twitter:site" content="">
+    <meta property="twitter:creator" content="">
+    
+    <link rel="canonical" href="">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"><!--Establece el modo de compatibilidad del navegador.-->
 
     <!-- Favicon con animación -->
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 
-    <link href="./index.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 
     <!-- Fuentes futuristas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
