--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -118,7 +118,6 @@
                     <span class="glitch-text" data-text="ALEY CABRERA">
                         <span class="gradient-text">ALEY CABRERA</span>
                     </span>
-                    
                 </h1>
                 <p class="cyber-subtitle">
                     <span id="typing-text" data-text="DESARROLLADOR DE SOFTWARE & CIBERSEGURIDAD"></span>
