correcion de errores ciberseguridad 1

--- a/pages/ciberseguridad.html
+++ b/pages/ciberseguridad.html
@@ -593,7 +593,7 @@
         </main>
 
         <!-- Botón de volver -->
-        <a href="AleyCabreraD/index.html" class="back-button"><i class="fas fa-arrow-left"></i> Volver al Inicio</a>
+        <a href="/AleyCabreraD/" class="back-button"><i class="fas fa-arrow-left"></i> Volver al Inicio</a>
     </div>
 
     <script>
