actualizacion de contactos

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                                 </div>
                                 <div class="info-content">
                                     <h4>Email</h4>
-                                    <p>aley.cabrera@gmail.com</p>
+                                    <p>inesamarkcyber@gmail.com</p>
                                 </div>
                             </div>
 
@@ -598,7 +598,7 @@
                                 </div>
                                 <div class="info-content">
                                     <h4>Teléfono</h4>
-                                    <p>+1 234 567 890</p>
+                                    <p>+57 323-473-7757</p>
                                 </div>
                             </div>
 
@@ -608,15 +608,15 @@
                                 </div>
                                 <div class="info-content">
                                     <h4>Ubicación</h4>
-                                    <p>Bogotá, Colombia</p>
+                                    <p>Barranquilla, Colombia</p>
                                 </div>
                             </div>
 
                             <div class="social-links">
-                                <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-                                <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
-                                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                                <a href="https://github.com/AleyCabrera" class="social-icon" target="_blank"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/aley-cabrera/" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://x.com/AlyCabde" class="social-icon" target="_blank"><i class="fab fa-twitter"></i></a>
+                                <a href="https://www.instagram.com/alycabdel/?hl=es" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
